# ai-engineering-projects

./: .gitignore
deepagents-projects/deep-research-agent/: langgraph.json  pyproject.toml
deepagents-projects/deep-research-agent/app/: agent.py  prompts.py  tools.py
deepagents-projects/research-agent/: langgraph.json  pyproject.toml
deepagents-projects/research-agent/app/: tools.py
langchain-projects/semantic-search/: pyproject.toml
langchain-projects/semantic-search/app/: main.py
langchain-projects/sql-agent/: langgraph.json  pyproject.toml
langchain-projects/sql-agent/app/: .env_example  agent.py  load.py
langgraph-projects/langchain-academy/: pyproject.toml
langgraph-projects/langgraph-essentials/: lab1_nodes.ipynb  lab2_edges.ipynb  lab4_conditional_edges__memory.ipynb  lab5_interrupt.ipynb  lab6_email_agent.ipynb  pyproject.toml
langgraph-projects/lessons/: lessons.md
langgraph-projects/research-agent/app/: agent.py
langgraph-projects/sql-agent/: README.md
langgraph-projects/sql-agent/app/: .env_example  db.py  tools.py
llm-apps/quiz-generator/: Dockerfile
rags/customer-support/: pyproject.toml
rags/customer-support/app/: main.py
rags/semantic-search/: main.py
