[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.6.12",
    "httpx>=0.28.1",
    "langchain-core>=1.5.0",
    "langchain-openrouter>=0.2.7",
    "langgraph-cli[inmem]>=0.4.31",
    "markdownify>=1.2.3",
    "python-decouple>=3.8",
    "tavily-python>=0.7.26",
]
