[project]
name = "semantic-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.4",
    "langchain-openrouter>=0.2.6",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.5.1",
    "pypdf>=6.14.2",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.2",
]
