[project]
name = "sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.12",
    "langchain-openrouter>=0.2.6",
    "langgraph==1.2.9",
    "langgraph-cli[inmem]>=0.4.30",
    "python-decouple>=3.8",
]
